[build-system]
requires =["setuptools"]
build-backend = "setuptools.build_meta"


[tool.black]
target-version = ['py310']
line-length = 90
include = '\.pyi?$'
exclude = '''
/(
	\.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist

  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
)/
'''

[tool.coverage.run]
command_line = "-m pytest"
source = ["vasp_manager"]
omit = ["*tests*"]


[tool.isort]
profile = 'black'
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 90


[tool.flake8]
max-line-length = 90
exclude = 'vasp_manager/tests/ | **/*.pyc | .git | __pycache__'
per-file-ignores = '__init__.py:F401'
select = 'E, F, W, B9'
ignore = 'E203, W503'

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--import-mode=importlib"
