[build-system]
requires =["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["vasp_manager"]

[tool.setuptools.dynamic]
version = {attr = "vasp_manager.__version__"}

[tool.setuptools.package-data]
"vasp_manager" = ["py.typed"]

[project]
name = "vasp_manager"
description = "A simple package to run and analyze VASP calculations"
dynamic = ["version"]
readme = {file = "README.md", content-type = "text/markdown"}
license = "MIT"
authors = [{name = "Dale Gaines II", email = "dalegainesii@gmail.com"}]
maintainers = [{name = "Dale Gaines II", email = "dalegainesii@gmail.com"}]
keywords = ["vasp", "dft", "high-throughput"]
requires-python = ">=3.10.0"
dependencies = [
    "pymatgen>=2022.5",
    "importlib_resources",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "coverage",
    "pre-commit",
    "pytest",
    "mypy",
    "ruff",
]
docs = [
    "blacken-docs>=1.16.0",
    "mkdocs-material>=9.5.16",
    "mkdocstrings[python]>=0.22.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.0",
    "pillow>=10.0.0",
]

[project.urls]
repository = "https://github.com/dgaines2/vasp_manager"

[tool.ruff]
target-version = "py310"
line-length = 90

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E203", "E231"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"vasp_manager/tests/test_utils.py" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["vasp_manager"]

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--import-mode=importlib"

[tool.coverage.run]
command_line = "-m pytest"
source = ["vasp_manager"]
omit = ["*tests*"]

[tool.mypy]
ignore_missing_imports = true
no_implicit_optional = false
